<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/navigation_airtickets"
            android:icon="@drawable/ic_air_24dp"
            android:title="@string/action_airtickets"/>

    <item
            android:id="@+id/navigation_hotels"
            android:icon="@drawable/ic_hotel_24dp"
            android:title="@string/action_hotels"/>

    <item
            android:id="@+id/navigation_shorter"
            android:icon="@drawable/ic_location_24dp"
            android:title="@string/action_shorter"/>

    <item
            android:id="@+id/navigation_subscriptions"
            android:icon="@drawable/ic_bell_24dp"
            android:title="@string/action_subscriptions"/>

    <item
            android:id="@+id/navigation_profile"
            android:icon="@drawable/ic_person_24dp"
            android:title="@string/action_profile"/>

</menu>