<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/holder_chips"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
            android:id="@+id/action_back"
            android:layout_width="89dp"
            android:layout_height="33dp"
            android:paddingStart="3dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:background="@drawable/bg_rectangle_radius_50dp"
            android:backgroundTint="@color/gray_3"
            android:gravity="center"
            android:text="@string/action_back"
            android:textSize="14sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:drawableStartCompat="@drawable/ic_plus_16dp"/>

    <TextView
            android:id="@+id/action_departure"
            android:layout_width="89dp"
            android:layout_height="33dp"
            android:layout_marginStart="8dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:background="@drawable/bg_rectangle_radius_50dp"
            android:backgroundTint="@color/gray_3"
            android:gravity="center"
            android:text="@string/action_departure"
            android:textSize="14sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/action_back"
            app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
            android:id="@+id/action_passenger_class"
            android:layout_width="104dp"
            android:layout_height="33dp"
            android:layout_marginStart="8dp"
            android:paddingStart="10dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:background="@drawable/bg_rectangle_radius_50dp"
            android:backgroundTint="@color/gray_3"
            android:gravity="center"
            android:text="@string/action_passenger_class"
            android:textSize="14sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/action_departure"
            app:layout_constraintBottom_toBottomOf="parent"
            app:drawableStartCompat="@drawable/ic_person_16dp"/>

    <TextView
            android:id="@+id/action_filter"
            android:layout_width="107dp"
            android:layout_height="33dp"
            android:layout_marginStart="8dp"
            android:paddingStart="10dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:background="@drawable/bg_rectangle_radius_50dp"
            android:backgroundTint="@color/gray_3"
            android:gravity="center"
            android:text="@string/action_filter"
            android:textSize="14sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/action_passenger_class"
            app:layout_constraintBottom_toBottomOf="parent"
            app:drawableStartCompat="@drawable/ic_filter_16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>